# Elecard

./: .gitignore  CMakeLists.txt  README.md
src/: BMPReader.cpp  BMPReader.h  YUVConverter.cpp  YUVConverter.h  YUVProcessor.cpp  YUVProcessor.h  main.cpp
